# moxi

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
.github/ISSUE_TEMPLATE/: bug_report.md  docs_improvement.md
.github/workflows/: ci.yml
crates/moxi_app/: Cargo.toml
crates/moxi_bpt/: Cargo.toml  README.md
crates/moxi_bpt/src/: action.rs  lib.rs  trigger.rs
crates/moxi_bpt/src/block/: description.rs  mod.rs  property.rs
crates/moxi_bpt/src/blockreg/: meshreg.rs  mod.rs
crates/moxi_bpt/src/chunk/: chunkbuilder.rs  components.rs  meshmd.rs  mod.rs  resources.rs
crates/moxi_bpt/src/chunk/systems/: mod.rs  spawn.rs  update.rs
crates/moxi_bpt/src/plugin/: app.rs  mod.rs  systems.rs
crates/moxi_bpt/src/world/: block_commands.rs  blocks_param.rs  blockworld.rs  mod.rs  update_event.rs
crates/moxi_bpta/: Cargo.toml  README.md
crates/moxi_bpta/src/: .action.rs.rustfmt  lib.rs  this_block.rs  trigger.rs
crates/moxi_bpta/src/block/: description.rs  mod.rs
crates/moxi_bpta/src/blockreg/: meshreg.rs  mod.rs
crates/moxi_bpta/src/chunk/: components.rs  meshmd.rs  resources.rs
crates/moxi_bpta/src/plugin/: mod.rs  systems.rs
crates/moxi_bpta/src/world/: blocks_param.rs  blockworld.rs  update_event.rs
crates/moxi_core/: Cargo.toml
crates/moxi_derive/: Cargo.toml
crates/moxi_derive/src/: config.rs
crates/moxi_effects/: Cargo.toml
crates/moxi_env/: Cargo.toml
crates/moxi_mesh_utils/: Cargo.toml
crates/moxi_mesh_utils/src/: adj.rs  block_mesh.rs  lib.rs  mesh_reg.rs  sl.rs  vav_utils.rs
crates/moxi_mesh_utils/src/cube/: gen.rs  md.rs  meshify.rs  mod.rs  update.rs
crates/moxi_mesh_utils/src/custom/: gen.rs  md.rs  meshify.rs  mod.rs  update.rs
crates/moxi_mesh_utils/src/xsprite/: gen.rs  md.rs  meshify.rs  mod.rs  update.rs
crates/moxi_physics/: Cargo.toml
crates/moxi_physics/src/: config_macro.rs  lib.rs
crates/moxi_player/: Cargo.toml
crates/moxi_ui/: Cargo.toml
crates/moxi_utils/: Cargo.toml
crates/moxi_utils/src/: chunk.rs  dir.rs  face.rs  lib.rs
docs/schedule/dark/: schedule_First.dot  schedule_FixedUpdate.dot  schedule_PhysicsSchedule.dot  schedule_PostUpdate.dot  schedule_PreUpdate.dot  schedule_Startup.dot  schedule_SubstepSchedule.dot  schedule_Update.dot
examples/: block_actions.rs  chunks.rs  config.rs  setup_block_actions.rs  setup_chunks.rs
examples/game_of_life/: blocks.rs  chunks.rs  main.rs  player.rs
examples/game_of_life/player/: action.rs
examples/game_of_life/player/controller/: movement.rs
examples/proof_of_concept/: blocks.rs  chunks.rs  main.rs  player.rs
examples/proof_of_concept/player/: action.rs  controller.rs
examples/simple_example/: blocks.rs  chunks.rs  main.rs  player.rs
src/: lib.rs
