[package]
name = "moxi"
version = "0.1.0"
authors = ["Adamkob12 <Github: Adamkob12>"]
description = "A simple, easy to use, wrapper / abstraction layer on the Bevy game engine that allows the creation of Block based games."
edition = "2021"
readme = "README.md"
repository = "https://github.com/Adamkob12/Moxi"
keywords = [
  "moxi",
  "bevy",
  "block",
  "game",
  "voxel",
  "voxels",
  "voxel-game",
  "voxel-games",
  "block-game",
  "block-games",
  "block-game-engine",
  "block-game-engines",
  "voxel-game-engine",
  "voxel-game-engines",
  "block-game-engine",
]
license = "MIT"
resolver = "2"

[dependencies]
moxi_utils = { path = "../moxi_utils" }
moxi_mesh_utils = { path = "../moxi_mesh_utils" }
moxi_bpt = { path = "../moxi_bpt" }
moxi_derive = { path = "../moxi_derive" }
moxi_physics = { path = "../moxi_physics" }
moxi_ui = { path = "../moxi_ui" }

[features]
default = ["block_id_16"]
# Bits per block id
block_id_8 = ["moxi_utils/block_id_8"]
block_id_16 = ["moxi_utils/block_id_16"]
block_id_32 = ["moxi_utils/block_id_32"]
block_id_64 = ["moxi_utils/block_id_64"]

[profile.dev]
opt-level = 3
