[package]
name = "moxi"
version = "0.1.0"
authors = ["Adamkob12 <Github: Adamkob12>"]
description = "A simple, easy to use, wrapper / abstraction layer on the Bevy game engine that allows the creation of Block based games."
edition = "2021"
readme = "README.md"
repository = "https://github.com/Adamkob12/Moxi"
keywords = [
  "moxi",
  "bevy",
  "block",
  "game",
  "voxel",
  "voxels",
  "voxel-game",
  "voxel-games",
  "block-game",
  "block-games",
  "block-game-engine",
  "block-game-engines",
  "voxel-game-engine",
  "voxel-game-engines",
  "block-game-engine",
]
license = "MIT"
resolver = "2"

[workspace]
members = ["crates/*"]

[dependencies]
moxi_utils = { path = "crates/moxi_utils" }
moxi_mesh_utils = { path = "crates/moxi_mesh_utils" }
moxi_bpt = { path = "crates/moxi_bpt" }
moxi_derive = { path = "crates/moxi_derive" }
moxi_physics = { path = "crates/moxi_physics" }
moxi_ui = { path = "crates/moxi_ui" }

[dev-dependencies]
bevy = "0.12"
bevy_flycam = "*"
bevy_xpbd_3d = { git = "https://github.com/Adamkob12/bevy_xpbd.git" }


[features]
default = ["block_id_16"]
# Bits per block id
block_id_8 = ["moxi_utils/block_id_8"]
block_id_16 = ["moxi_utils/block_id_16"]
block_id_32 = ["moxi_utils/block_id_32"]
block_id_64 = ["moxi_utils/block_id_64"]

[profile.dev]
opt-level = 3
