[package]
name = "moxi_mesh_utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
moxi_utils = { path = "../moxi_utils" }
bevy_math = "0.12"
bevy_render = "0.12"
bevy_utils = "0.12"
bevy_asset = "0.12"
bevy_reflect = "0.12"
